追加: PC持ち出し管理UI、持ち出し登録・管理機能およびTransport関連のリポジトリ・サービスクラスを実装